<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center|top"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/completedBGBottomCL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/completedBGMiddleCL"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="-130dp"
        android:visibility="visible"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="294dp"
            android:layout_height="250dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mockup_completedbgbottom" />

        <TextView
            android:id="@+id/completedOnwardTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/bungee_inline"
            android:rotation="2"
            android:text="@string/completed_forward"
            android:textColor="#A6000000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:backgroundTint="#00FFFFFF"
            android:drawableTint="#00FFFFFF"
            android:foregroundTint="#00FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/button"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/button"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="48dp"
            android:backgroundTint="#00FFFFFF"
            android:drawableTint="#00FFFFFF"
            android:foregroundTint="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/button3"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="48dp"
            android:backgroundTint="#00FFFFFF"
            android:drawableTint="#00FFFFFF"
            android:foregroundTint="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="#FFFFFF" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/button"
            app:srcCompat="@drawable/ic_baseline_menu_24" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toTopOf="@+id/button3"
            app:srcCompat="@drawable/ic_baseline_settings_24" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/button2"
            app:srcCompat="@drawable/ic_baseline_refresh_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/completedBGMiddleCL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/comppletedBGHeadCL"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="-130dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comppletedBGHeadCL"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="280dp"
            android:layout_height="240dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mockup_completedbg" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/gloria_hallelujah"
            android:rotation="-1"
            android:text="@string/completed_stat_taskstotal"
            android:textColor="#9F000000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/gloria_hallelujah"
            android:rotation="2"
            android:text="@string/completed_stat_taskscurrent"
            android:textColor="#9F000000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="26dp"
            android:fontFamily="@font/gloria_hallelujah"
            android:rotation="1"
            android:text="@string/completed_stat_launches"
            android:textColor="#9F000000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/comppletedBGHeadCL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="370dp"
            android:layout_height="180dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mockup_completedbghead" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:fontFamily="@font/bungee_inline"
            android:includeFontPadding="false"
            android:text="@string/completed"
            android:textColor="#A6000000"
            android:textSize="19dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/completedHeaderTV"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bungee_inline"
            android:includeFontPadding="false"
            android:lineSpacingExtra="4dp"
            android:textAlignment="center"
            android:textColor="#A6000000"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>